# Actix-web-API-REST-Practice

./: .gitignore  Cargo.toml
src/: auth.rs  controllers.rs  db.rs  error.rs  main.rs  main.txt  middleware.rs  models.rs  routes.rs
src/app/system/: services.rs  system.rs
src/app/system/structs/: health.rs
src/middleware/: request_info.rs
