[package]
name = "actix_web_learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-jwt-session = "1.0.2"
actix-web = "4.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.20"
mongodb = "2.7.0"
redis = "0.23.3"
redis-async-pool = "0.2.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
